# SenseWorld

./: .env.example  .gitignore  CLAUDE.md  README.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_admin.py  20260325_2110_1b2aecfb47ef_init_mysql.py  20260326_1501_843b7b650a4f_add_role_and_model_configs.py  20260326_1800_9d2c1f0c9d2b_add_model_config_fields.py  20260326_1830_c4a8b9c0e2d1_add_admin_tables.py  20260326_1832_54cb82f10440_add_role_and_model_configs.py  20260327_1259_d1bb97177fed_merge_heads.py  20260329_0055_c17697ed16d4_remove_cost_add_metrics_to_usagelog.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  omni_websocket.py  websocket.py
backend/app/api/v1/: admin.py  audio.py  auth.py  chat.py  deps.py  (+3 more)
backend/app/core/: __init__.py  cache.py  database.py  encryption.py  exceptions.py  logging.py  logging.py.backup  middleware.py  security.py
backend/app/models/: __init__.py  alert.py  alert.py.deleted  conversation.py  message.py  model_config.py  request_log.py  system_setting.py  terminal.py  usage_log.py  user.py
backend/app/schemas/: __init__.py  auth.py  conversation.py  message.py
backend/app/services/: __init__.py  alert_service.py.deleted  asr_service.py  config_service.py  conversation_service.py  llm_service.py  omni_realtime_service.py  request_log_service.py  system_setting_service.py  terminal_service.py  tts_service.py  usage_service.py  vision_service.py
backend/app/tasks/: cleanup.py
backend/app/utils/: __init__.py
(+144 files in other folders)
